# wiki-chatbot

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml  secrets.ini.sample
.github/: dependabot.yml
chatbot/: __main__.py  chat_agent.py  cli.py  utils.py  wikipages_indexer.py
src/app/: chat_agent.py  cli.py  main.py  wikipages_indexer.py
src/app/clients/: load_tools.py  main.py
src/app/clients/mcp/: load_tools.py  main.py  prompts_handler.py  resource_handler.py  state_entity.py  tools_handler.py
src/app/mcp/: wikipedia_server.py
src/app/server/mcp/: main.py  tools.py
src/app/servers/mcp/: main.py  prompts.py  resources.py  server.py  tools.py
src/app/utils/: __init__.py  env_utils.py
tests/: test_entities.py
