[tool.poetry]
name = "chatbot-wiki"
# This version field is not being used. The version field is dynamically updated as below
version = "0.0.0-post.11+c22f808"
description = "A chat assistant that utilizes Retrieval Augmented Generation (RAG) to answer questions based on a Wikipedia page of your choice"
authors = ["BrianLusina <12752833+BrianLusina@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12.0"
openai = "^1.109.1"
llama-index = "^0.14.4"
pydantic = "^2.12.0"
llama-index-readers-wikipedia = "^0.4.1"
chainlit = "^2.8.3"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.9"
pytest = "^8.4.2"
black = "^25.9.0"
pre-commit = "^4.3.0"
flake8 = "^7.3.0"
mypy = "^1.18.2"
coverage = "^7.10.7"
pytest-cov = "^7.0.0"
twine = "^6.2.0"

[tool.mypy]
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true

# reference: https://github.com/mtkennerly/poetry-dynamic-versioning
[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "semver"
latest-tag = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
