[project]
name = "wiki-chatbot"
version = "0.1.0"
description = "A chat assistant that utilizes Retrieval Augmented Generation (RAG) to answer questions based on a Wikipedia page of your choice"
authors = ["BrianLusina <12752833+BrianLusina@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.21.0",
    "wikipedia-sections>=2.0.0",
    "wikipedia>=1.4.0",
    "langchain>=1.0.5",
    "langgraph>=1.1.9",
    "langchain-openai>=1.1.14",
    "langchain-mcp-adapters>=0.1.12",
    "openai>=2.32.0",
    "pydantic>=2.13.1",
    "chainlit>=2.11.1",
    "llama-index-readers-wikipedia>=0.4.1",
    "llama-index>=0.14.21",
]

[dependency-groups]
lint = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]
test = [
    "coverage>=7.11.3",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]
tools = [
    "twine>=6.2.0",
]
